<resources>
    <string name="app_name">RUPizzeriaMobile</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for Main Activity -->
    <string name="main_header">RUPizzeria</string>
    <string name="main_ordering_title">Ordering</string>
    <string name="main_ordering_menu_title">Menu</string>
    <string name="main_orders_title">Orders</string>
    <string name="main_orders_current_title">Current Order</string>
    <string name="main_orders_store_title">Store Orders</string>
    <string name="place_order_title">Place Order</string>
    <string name="clear_order_title">Clear Order</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="subtotal_title">Subtotal $: </string>
    <string name="tax_title">Sales Tax $: </string>
    <string name="total_title">Total $: </string>
    <string name="placeholder_money">0.00</string>
    <string name="placeholder"> placeholder </string>
    <string name="pie_cost_label">Pie Cost: $ </string>
    <string name="add_toppings_label">Add. Toppings: $ </string>
    <string name="total_pie_cost_label">Total Pie Cost: $ </string>
    <string name="total_orders"> Total # Orders: </string>
    <string name="order_total"> Order Total $:  </string>

    <!-- Strings for Toppings -->
    <string name="bbq_chicken_topping">BBQ Chicken</string>
    <string name="pepperoni_topping">Pepperoni</string>
    <string name="ham_topping">Ham</string>
    <string name="sausage_topping">Sausage</string>
    <string name="bacon_topping">Bacon</string>
    <string name="mushrooms_topping">Mushrooms</string>
    <string name="onions_topping">Onions</string>
    <string name="jalapeno_topping">Jalapeno</string>
    <string name="cheddar_topping">Cheddar</string>
    <string name="pineapple_topping">Pineapple</string>
    <string name="provolone_topping">Provolone</string>
    <string name="green_peppers_topping">Green Peppers</string>
    <string name="beef_topping">Beef</string>

</resources>